Checkpoints/Checkpt#5/Checkpt#5-full/y.output
Terminals which are not used

   NEWLINE
   TRASH


State 13 conflicts: 1 reduce/reduce
State 70 conflicts: 2 shift/reduce


Grammar

    0 $accept: program $end

    1 program: MAIN SEMICOLON data algorithm END MAIN SEMICOLON

    2 data: DATA COLON fulldeclaration

    3 fulldeclaration: declaration
    4                | declaration fulldeclaration
    5                | /* empty */

    6 declaration: datatype COLON varlist SEMICOLON

    7 datatype: REAL
    8         | INTEGER

    9 varlist: item
   10        | item COMMA varlist
   11        | /* empty */

   12 item: VARIABLE
   13     | VARIABLE LBRACKET INTCONSTANT RBRACKET

   14 algorithm: ALGORITHM COLON body

   15 body: /* empty */
   16     | statement body

   17 statement: assignment
   18          | counting
   19          | ifstatement
   20          | ifesle
   21          | whileloop
   22          | read
   23          | print
   24          | exit

   25 assignment: variable ASSIGN fullexpression SEMICOLON

   26 exit: EXIT SEMICOLON

   27 counting: COUNTING variable UPWARD fullexpression TO fullexpression SEMICOLON body END COUNTING SEMICOLON
   28         | COUNTING variable DOWNWARD fullexpression TO fullexpression SEMICOLON body END COUNTING SEMICOLON

   29 ifstatement: IF fullexpression SEMICOLON body END IF SEMICOLON

   30 ifesle: IF fullexpression SEMICOLON body ELSE SEMICOLON body END IF SEMICOLON

   31 whileloop: WHILE fullexpression SEMICOLON body END WHILE SEMICOLON

   32 fullexpression: comparison
   33               | NOT fullexpression
   34               | fullexpression AND comparison
   35               | fullexpression OR comparison

   36 comparison: expression
   37           | comparison LESSTHAN expression
   38           | comparison GREATERTHAN expression
   39           | comparison LESSOREQUAL expression
   40           | comparison GREATEROREQUAL expression
   41           | comparison EQUAL expression
   42           | comparison NOTEQUAL expression

   43 expression: term
   44           | expression ADDITION term
   45           | expression SUBTRACTION term

   46 term: factor
   47     | term MULTIPLICATION factor
   48     | term DIVISION factor
   49     | term MODULUS factor

   50 factor: atom
   51       | LPARENTH expression RPARENTH
   52       | SUBTRACTION factor

   53 atom: variable
   54     | INTCONSTANT
   55     | REALCONSTANT

   56 variable: VARIABLE
   57         | VARIABLE LBRACKET expression RBRACKET

   58 read: READ variable SEMICOLON

   59 print: PRINT printlist SEMICOLON

   60 printlist: printitem
   61          | printitem COMMA printlist

   62 printitem: fullexpression
   63          | STRING
   64          | CARRIAGERETURN


Terminals, with rules where they appear

$end (0) 0
error (256)
ADDITION (258) 44
SUBTRACTION (259) 45 52
MULTIPLICATION (260) 47
DIVISION (261) 48
MODULUS (262) 49
LESSTHAN (263) 37
GREATERTHAN (264) 38
LESSOREQUAL (265) 39
GREATEROREQUAL (266) 40
EQUAL (267) 41
NOTEQUAL (268) 42
AND (269) 34
OR (270) 35
NOT (271) 33
LPARENTH (272) 51
RPARENTH (273) 51
LBRACKET (274) 13 57
RBRACKET (275) 13 57
SEMICOLON (276) 1 6 25 26 27 28 29 30 31 58 59
COLON (277) 2 6 14
COMMA (278) 10 61
ASSIGN (279) 25
CARRIAGERETURN (280) 64
MAIN (281) 1
END (282) 1 27 28 29 30 31
EXIT (283) 26
IF (284) 29 30
ELSE (285) 30
WHILE (286) 31
TO (287) 27 28
COUNTING (288) 27 28
UPWARD (289) 27
DOWNWARD (290) 28
REAL (291) 7
INTEGER (292) 8
DATA (293) 2
ALGORITHM (294) 14
READ (295) 58
PRINT (296) 59
VARIABLE (297) 12 13 56 57
STRING (298) 63
INTCONSTANT (299) 13 54
REALCONSTANT (300) 55
NEWLINE (301)
TRASH (302)


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
program (49)
    on left: 1, on right: 0
data (50)
    on left: 2, on right: 1
fulldeclaration (51)
    on left: 3 4 5, on right: 2 4
declaration (52)
    on left: 6, on right: 3 4
datatype (53)
    on left: 7 8, on right: 6
varlist (54)
    on left: 9 10 11, on right: 6 10
item (55)
    on left: 12 13, on right: 9 10
algorithm (56)
    on left: 14, on right: 1
body (57)
    on left: 15 16, on right: 14 16 27 28 29 30 31
statement (58)
    on left: 17 18 19 20 21 22 23 24, on right: 16
assignment (59)
    on left: 25, on right: 17
exit (60)
    on left: 26, on right: 24
counting (61)
    on left: 27 28, on right: 18
ifstatement (62)
    on left: 29, on right: 19
ifesle (63)
    on left: 30, on right: 20
whileloop (64)
    on left: 31, on right: 21
fullexpression (65)
    on left: 32 33 34 35, on right: 25 27 28 29 30 31 33 34 35 62
comparison (66)
    on left: 36 37 38 39 40 41 42, on right: 32 34 35 37 38 39 40 41
    42
expression (67)
    on left: 43 44 45, on right: 36 37 38 39 40 41 42 44 45 51 57
term (68)
    on left: 46 47 48 49, on right: 43 44 45 47 48 49
factor (69)
    on left: 50 51 52, on right: 46 47 48 49 52
atom (70)
    on left: 53 54 55, on right: 50
variable (71)
    on left: 56 57, on right: 25 27 28 53 58
read (72)
    on left: 58, on right: 22
print (73)
    on left: 59, on right: 23
printlist (74)
    on left: 60 61, on right: 59 61
printitem (75)
    on left: 62 63 64, on right: 60 61


state 0

    0 $accept: . program $end

    MAIN  shift, and go to state 1

    program  go to state 2


state 1

    1 program: MAIN . SEMICOLON data algorithm END MAIN SEMICOLON

    SEMICOLON  shift, and go to state 3


state 2

    0 $accept: program . $end

    $end  shift, and go to state 4


state 3

    1 program: MAIN SEMICOLON . data algorithm END MAIN SEMICOLON

    DATA  shift, and go to state 5

    data  go to state 6


state 4

    0 $accept: program $end .

    $default  accept


state 5

    2 data: DATA . COLON fulldeclaration

    COLON  shift, and go to state 7


state 6

    1 program: MAIN SEMICOLON data . algorithm END MAIN SEMICOLON

    ALGORITHM  shift, and go to state 8

    algorithm  go to state 9


state 7

    2 data: DATA COLON . fulldeclaration

    REAL     shift, and go to state 10
    INTEGER  shift, and go to state 11

    $default  reduce using rule 5 (fulldeclaration)

    fulldeclaration  go to state 12
    declaration      go to state 13
    datatype         go to state 14


state 8

   14 algorithm: ALGORITHM . COLON body

    COLON  shift, and go to state 15


state 9

    1 program: MAIN SEMICOLON data algorithm . END MAIN SEMICOLON

    END  shift, and go to state 16


state 10

    7 datatype: REAL .

    $default  reduce using rule 7 (datatype)


state 11

    8 datatype: INTEGER .

    $default  reduce using rule 8 (datatype)


state 12

    2 data: DATA COLON fulldeclaration .

    $default  reduce using rule 2 (data)


state 13

    3 fulldeclaration: declaration .
    4                | declaration . fulldeclaration

    REAL     shift, and go to state 10
    INTEGER  shift, and go to state 11

    ALGORITHM  reduce using rule 3 (fulldeclaration)
    ALGORITHM  [reduce using rule 5 (fulldeclaration)]
    $default   reduce using rule 3 (fulldeclaration)

    fulldeclaration  go to state 17
    declaration      go to state 13
    datatype         go to state 14


state 14

    6 declaration: datatype . COLON varlist SEMICOLON

    COLON  shift, and go to state 18


state 15

   14 algorithm: ALGORITHM COLON . body

    EXIT      shift, and go to state 19
    IF        shift, and go to state 20
    WHILE     shift, and go to state 21
    COUNTING  shift, and go to state 22
    READ      shift, and go to state 23
    PRINT     shift, and go to state 24
    VARIABLE  shift, and go to state 25

    $default  reduce using rule 15 (body)

    body         go to state 26
    statement    go to state 27
    assignment   go to state 28
    exit         go to state 29
    counting     go to state 30
    ifstatement  go to state 31
    ifesle       go to state 32
    whileloop    go to state 33
    variable     go to state 34
    read         go to state 35
    print        go to state 36


state 16

    1 program: MAIN SEMICOLON data algorithm END . MAIN SEMICOLON

    MAIN  shift, and go to state 37


state 17

    4 fulldeclaration: declaration fulldeclaration .

    $default  reduce using rule 4 (fulldeclaration)


state 18

    6 declaration: datatype COLON . varlist SEMICOLON

    VARIABLE  shift, and go to state 38

    $default  reduce using rule 11 (varlist)

    varlist  go to state 39
    item     go to state 40


state 19

   26 exit: EXIT . SEMICOLON

    SEMICOLON  shift, and go to state 41


state 20

   29 ifstatement: IF . fullexpression SEMICOLON body END IF SEMICOLON
   30 ifesle: IF . fullexpression SEMICOLON body ELSE SEMICOLON body END IF SEMICOLON

    SUBTRACTION   shift, and go to state 42
    NOT           shift, and go to state 43
    LPARENTH      shift, and go to state 44
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 45
    REALCONSTANT  shift, and go to state 46

    fullexpression  go to state 47
    comparison      go to state 48
    expression      go to state 49
    term            go to state 50
    factor          go to state 51
    atom            go to state 52
    variable        go to state 53


state 21

   31 whileloop: WHILE . fullexpression SEMICOLON body END WHILE SEMICOLON

    SUBTRACTION   shift, and go to state 42
    NOT           shift, and go to state 43
    LPARENTH      shift, and go to state 44
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 45
    REALCONSTANT  shift, and go to state 46

    fullexpression  go to state 54
    comparison      go to state 48
    expression      go to state 49
    term            go to state 50
    factor          go to state 51
    atom            go to state 52
    variable        go to state 53


state 22

   27 counting: COUNTING . variable UPWARD fullexpression TO fullexpression SEMICOLON body END COUNTING SEMICOLON
   28         | COUNTING . variable DOWNWARD fullexpression TO fullexpression SEMICOLON body END COUNTING SEMICOLON

    VARIABLE  shift, and go to state 25

    variable  go to state 55


state 23

   58 read: READ . variable SEMICOLON

    VARIABLE  shift, and go to state 25

    variable  go to state 56


state 24

   59 print: PRINT . printlist SEMICOLON

    SUBTRACTION     shift, and go to state 42
    NOT             shift, and go to state 43
    LPARENTH        shift, and go to state 44
    CARRIAGERETURN  shift, and go to state 57
    VARIABLE        shift, and go to state 25
    STRING          shift, and go to state 58
    INTCONSTANT     shift, and go to state 45
    REALCONSTANT    shift, and go to state 46

    fullexpression  go to state 59
    comparison      go to state 48
    expression      go to state 49
    term            go to state 50
    factor          go to state 51
    atom            go to state 52
    variable        go to state 53
    printlist       go to state 60
    printitem       go to state 61


state 25

   56 variable: VARIABLE .
   57         | VARIABLE . LBRACKET expression RBRACKET

    LBRACKET  shift, and go to state 62

    $default  reduce using rule 56 (variable)


state 26

   14 algorithm: ALGORITHM COLON body .

    $default  reduce using rule 14 (algorithm)


state 27

   16 body: statement . body

    EXIT      shift, and go to state 19
    IF        shift, and go to state 20
    WHILE     shift, and go to state 21
    COUNTING  shift, and go to state 22
    READ      shift, and go to state 23
    PRINT     shift, and go to state 24
    VARIABLE  shift, and go to state 25

    $default  reduce using rule 15 (body)

    body         go to state 63
    statement    go to state 27
    assignment   go to state 28
    exit         go to state 29
    counting     go to state 30
    ifstatement  go to state 31
    ifesle       go to state 32
    whileloop    go to state 33
    variable     go to state 34
    read         go to state 35
    print        go to state 36


state 28

   17 statement: assignment .

    $default  reduce using rule 17 (statement)


state 29

   24 statement: exit .

    $default  reduce using rule 24 (statement)


state 30

   18 statement: counting .

    $default  reduce using rule 18 (statement)


state 31

   19 statement: ifstatement .

    $default  reduce using rule 19 (statement)


state 32

   20 statement: ifesle .

    $default  reduce using rule 20 (statement)


state 33

   21 statement: whileloop .

    $default  reduce using rule 21 (statement)


state 34

   25 assignment: variable . ASSIGN fullexpression SEMICOLON

    ASSIGN  shift, and go to state 64


state 35

   22 statement: read .

    $default  reduce using rule 22 (statement)


state 36

   23 statement: print .

    $default  reduce using rule 23 (statement)


state 37

    1 program: MAIN SEMICOLON data algorithm END MAIN . SEMICOLON

    SEMICOLON  shift, and go to state 65


state 38

   12 item: VARIABLE .
   13     | VARIABLE . LBRACKET INTCONSTANT RBRACKET

    LBRACKET  shift, and go to state 66

    $default  reduce using rule 12 (item)


state 39

    6 declaration: datatype COLON varlist . SEMICOLON

    SEMICOLON  shift, and go to state 67


state 40

    9 varlist: item .
   10        | item . COMMA varlist

    COMMA  shift, and go to state 68

    $default  reduce using rule 9 (varlist)


state 41

   26 exit: EXIT SEMICOLON .

    $default  reduce using rule 26 (exit)


state 42

   52 factor: SUBTRACTION . factor

    SUBTRACTION   shift, and go to state 42
    LPARENTH      shift, and go to state 44
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 45
    REALCONSTANT  shift, and go to state 46

    factor    go to state 69
    atom      go to state 52
    variable  go to state 53


state 43

   33 fullexpression: NOT . fullexpression

    SUBTRACTION   shift, and go to state 42
    NOT           shift, and go to state 43
    LPARENTH      shift, and go to state 44
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 45
    REALCONSTANT  shift, and go to state 46

    fullexpression  go to state 70
    comparison      go to state 48
    expression      go to state 49
    term            go to state 50
    factor          go to state 51
    atom            go to state 52
    variable        go to state 53


state 44

   51 factor: LPARENTH . expression RPARENTH

    SUBTRACTION   shift, and go to state 42
    LPARENTH      shift, and go to state 44
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 45
    REALCONSTANT  shift, and go to state 46

    expression  go to state 71
    term        go to state 50
    factor      go to state 51
    atom        go to state 52
    variable    go to state 53


state 45

   54 atom: INTCONSTANT .

    $default  reduce using rule 54 (atom)


state 46

   55 atom: REALCONSTANT .

    $default  reduce using rule 55 (atom)


state 47

   29 ifstatement: IF fullexpression . SEMICOLON body END IF SEMICOLON
   30 ifesle: IF fullexpression . SEMICOLON body ELSE SEMICOLON body END IF SEMICOLON
   34 fullexpression: fullexpression . AND comparison
   35               | fullexpression . OR comparison

    AND        shift, and go to state 72
    OR         shift, and go to state 73
    SEMICOLON  shift, and go to state 74


state 48

   32 fullexpression: comparison .
   37 comparison: comparison . LESSTHAN expression
   38           | comparison . GREATERTHAN expression
   39           | comparison . LESSOREQUAL expression
   40           | comparison . GREATEROREQUAL expression
   41           | comparison . EQUAL expression
   42           | comparison . NOTEQUAL expression

    LESSTHAN        shift, and go to state 75
    GREATERTHAN     shift, and go to state 76
    LESSOREQUAL     shift, and go to state 77
    GREATEROREQUAL  shift, and go to state 78
    EQUAL           shift, and go to state 79
    NOTEQUAL        shift, and go to state 80

    $default  reduce using rule 32 (fullexpression)


state 49

   36 comparison: expression .
   44 expression: expression . ADDITION term
   45           | expression . SUBTRACTION term

    ADDITION     shift, and go to state 81
    SUBTRACTION  shift, and go to state 82

    $default  reduce using rule 36 (comparison)


state 50

   43 expression: term .
   47 term: term . MULTIPLICATION factor
   48     | term . DIVISION factor
   49     | term . MODULUS factor

    MULTIPLICATION  shift, and go to state 83
    DIVISION        shift, and go to state 84
    MODULUS         shift, and go to state 85

    $default  reduce using rule 43 (expression)


state 51

   46 term: factor .

    $default  reduce using rule 46 (term)


state 52

   50 factor: atom .

    $default  reduce using rule 50 (factor)


state 53

   53 atom: variable .

    $default  reduce using rule 53 (atom)


state 54

   31 whileloop: WHILE fullexpression . SEMICOLON body END WHILE SEMICOLON
   34 fullexpression: fullexpression . AND comparison
   35               | fullexpression . OR comparison

    AND        shift, and go to state 72
    OR         shift, and go to state 73
    SEMICOLON  shift, and go to state 86


state 55

   27 counting: COUNTING variable . UPWARD fullexpression TO fullexpression SEMICOLON body END COUNTING SEMICOLON
   28         | COUNTING variable . DOWNWARD fullexpression TO fullexpression SEMICOLON body END COUNTING SEMICOLON

    UPWARD    shift, and go to state 87
    DOWNWARD  shift, and go to state 88


state 56

   58 read: READ variable . SEMICOLON

    SEMICOLON  shift, and go to state 89


state 57

   64 printitem: CARRIAGERETURN .

    $default  reduce using rule 64 (printitem)


state 58

   63 printitem: STRING .

    $default  reduce using rule 63 (printitem)


state 59

   34 fullexpression: fullexpression . AND comparison
   35               | fullexpression . OR comparison
   62 printitem: fullexpression .

    AND  shift, and go to state 72
    OR   shift, and go to state 73

    $default  reduce using rule 62 (printitem)


state 60

   59 print: PRINT printlist . SEMICOLON

    SEMICOLON  shift, and go to state 90


state 61

   60 printlist: printitem .
   61          | printitem . COMMA printlist

    COMMA  shift, and go to state 91

    $default  reduce using rule 60 (printlist)


state 62

   57 variable: VARIABLE LBRACKET . expression RBRACKET

    SUBTRACTION   shift, and go to state 42
    LPARENTH      shift, and go to state 44
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 45
    REALCONSTANT  shift, and go to state 46

    expression  go to state 92
    term        go to state 50
    factor      go to state 51
    atom        go to state 52
    variable    go to state 53


state 63

   16 body: statement body .

    $default  reduce using rule 16 (body)


state 64

   25 assignment: variable ASSIGN . fullexpression SEMICOLON

    SUBTRACTION   shift, and go to state 42
    NOT           shift, and go to state 43
    LPARENTH      shift, and go to state 44
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 45
    REALCONSTANT  shift, and go to state 46

    fullexpression  go to state 93
    comparison      go to state 48
    expression      go to state 49
    term            go to state 50
    factor          go to state 51
    atom            go to state 52
    variable        go to state 53


state 65

    1 program: MAIN SEMICOLON data algorithm END MAIN SEMICOLON .

    $default  reduce using rule 1 (program)


state 66

   13 item: VARIABLE LBRACKET . INTCONSTANT RBRACKET

    INTCONSTANT  shift, and go to state 94


state 67

    6 declaration: datatype COLON varlist SEMICOLON .

    $default  reduce using rule 6 (declaration)


state 68

   10 varlist: item COMMA . varlist

    VARIABLE  shift, and go to state 38

    $default  reduce using rule 11 (varlist)

    varlist  go to state 95
    item     go to state 40


state 69

   52 factor: SUBTRACTION factor .

    $default  reduce using rule 52 (factor)


state 70

   33 fullexpression: NOT fullexpression .
   34               | fullexpression . AND comparison
   35               | fullexpression . OR comparison

    AND  shift, and go to state 72
    OR   shift, and go to state 73

    AND       [reduce using rule 33 (fullexpression)]
    OR        [reduce using rule 33 (fullexpression)]
    $default  reduce using rule 33 (fullexpression)


state 71

   44 expression: expression . ADDITION term
   45           | expression . SUBTRACTION term
   51 factor: LPARENTH expression . RPARENTH

    ADDITION     shift, and go to state 81
    SUBTRACTION  shift, and go to state 82
    RPARENTH     shift, and go to state 96


state 72

   34 fullexpression: fullexpression AND . comparison

    SUBTRACTION   shift, and go to state 42
    LPARENTH      shift, and go to state 44
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 45
    REALCONSTANT  shift, and go to state 46

    comparison  go to state 97
    expression  go to state 49
    term        go to state 50
    factor      go to state 51
    atom        go to state 52
    variable    go to state 53


state 73

   35 fullexpression: fullexpression OR . comparison

    SUBTRACTION   shift, and go to state 42
    LPARENTH      shift, and go to state 44
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 45
    REALCONSTANT  shift, and go to state 46

    comparison  go to state 98
    expression  go to state 49
    term        go to state 50
    factor      go to state 51
    atom        go to state 52
    variable    go to state 53


state 74

   29 ifstatement: IF fullexpression SEMICOLON . body END IF SEMICOLON
   30 ifesle: IF fullexpression SEMICOLON . body ELSE SEMICOLON body END IF SEMICOLON

    EXIT      shift, and go to state 19
    IF        shift, and go to state 20
    WHILE     shift, and go to state 21
    COUNTING  shift, and go to state 22
    READ      shift, and go to state 23
    PRINT     shift, and go to state 24
    VARIABLE  shift, and go to state 25

    $default  reduce using rule 15 (body)

    body         go to state 99
    statement    go to state 27
    assignment   go to state 28
    exit         go to state 29
    counting     go to state 30
    ifstatement  go to state 31
    ifesle       go to state 32
    whileloop    go to state 33
    variable     go to state 34
    read         go to state 35
    print        go to state 36


state 75

   37 comparison: comparison LESSTHAN . expression

    SUBTRACTION   shift, and go to state 42
    LPARENTH      shift, and go to state 44
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 45
    REALCONSTANT  shift, and go to state 46

    expression  go to state 100
    term        go to state 50
    factor      go to state 51
    atom        go to state 52
    variable    go to state 53


state 76

   38 comparison: comparison GREATERTHAN . expression

    SUBTRACTION   shift, and go to state 42
    LPARENTH      shift, and go to state 44
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 45
    REALCONSTANT  shift, and go to state 46

    expression  go to state 101
    term        go to state 50
    factor      go to state 51
    atom        go to state 52
    variable    go to state 53


state 77

   39 comparison: comparison LESSOREQUAL . expression

    SUBTRACTION   shift, and go to state 42
    LPARENTH      shift, and go to state 44
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 45
    REALCONSTANT  shift, and go to state 46

    expression  go to state 102
    term        go to state 50
    factor      go to state 51
    atom        go to state 52
    variable    go to state 53


state 78

   40 comparison: comparison GREATEROREQUAL . expression

    SUBTRACTION   shift, and go to state 42
    LPARENTH      shift, and go to state 44
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 45
    REALCONSTANT  shift, and go to state 46

    expression  go to state 103
    term        go to state 50
    factor      go to state 51
    atom        go to state 52
    variable    go to state 53


state 79

   41 comparison: comparison EQUAL . expression

    SUBTRACTION   shift, and go to state 42
    LPARENTH      shift, and go to state 44
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 45
    REALCONSTANT  shift, and go to state 46

    expression  go to state 104
    term        go to state 50
    factor      go to state 51
    atom        go to state 52
    variable    go to state 53


state 80

   42 comparison: comparison NOTEQUAL . expression

    SUBTRACTION   shift, and go to state 42
    LPARENTH      shift, and go to state 44
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 45
    REALCONSTANT  shift, and go to state 46

    expression  go to state 105
    term        go to state 50
    factor      go to state 51
    atom        go to state 52
    variable    go to state 53


state 81

   44 expression: expression ADDITION . term

    SUBTRACTION   shift, and go to state 42
    LPARENTH      shift, and go to state 44
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 45
    REALCONSTANT  shift, and go to state 46

    term      go to state 106
    factor    go to state 51
    atom      go to state 52
    variable  go to state 53


state 82

   45 expression: expression SUBTRACTION . term

    SUBTRACTION   shift, and go to state 42
    LPARENTH      shift, and go to state 44
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 45
    REALCONSTANT  shift, and go to state 46

    term      go to state 107
    factor    go to state 51
    atom      go to state 52
    variable  go to state 53


state 83

   47 term: term MULTIPLICATION . factor

    SUBTRACTION   shift, and go to state 42
    LPARENTH      shift, and go to state 44
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 45
    REALCONSTANT  shift, and go to state 46

    factor    go to state 108
    atom      go to state 52
    variable  go to state 53


state 84

   48 term: term DIVISION . factor

    SUBTRACTION   shift, and go to state 42
    LPARENTH      shift, and go to state 44
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 45
    REALCONSTANT  shift, and go to state 46

    factor    go to state 109
    atom      go to state 52
    variable  go to state 53


state 85

   49 term: term MODULUS . factor

    SUBTRACTION   shift, and go to state 42
    LPARENTH      shift, and go to state 44
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 45
    REALCONSTANT  shift, and go to state 46

    factor    go to state 110
    atom      go to state 52
    variable  go to state 53


state 86

   31 whileloop: WHILE fullexpression SEMICOLON . body END WHILE SEMICOLON

    EXIT      shift, and go to state 19
    IF        shift, and go to state 20
    WHILE     shift, and go to state 21
    COUNTING  shift, and go to state 22
    READ      shift, and go to state 23
    PRINT     shift, and go to state 24
    VARIABLE  shift, and go to state 25

    $default  reduce using rule 15 (body)

    body         go to state 111
    statement    go to state 27
    assignment   go to state 28
    exit         go to state 29
    counting     go to state 30
    ifstatement  go to state 31
    ifesle       go to state 32
    whileloop    go to state 33
    variable     go to state 34
    read         go to state 35
    print        go to state 36


state 87

   27 counting: COUNTING variable UPWARD . fullexpression TO fullexpression SEMICOLON body END COUNTING SEMICOLON

    SUBTRACTION   shift, and go to state 42
    NOT           shift, and go to state 43
    LPARENTH      shift, and go to state 44
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 45
    REALCONSTANT  shift, and go to state 46

    fullexpression  go to state 112
    comparison      go to state 48
    expression      go to state 49
    term            go to state 50
    factor          go to state 51
    atom            go to state 52
    variable        go to state 53


state 88

   28 counting: COUNTING variable DOWNWARD . fullexpression TO fullexpression SEMICOLON body END COUNTING SEMICOLON

    SUBTRACTION   shift, and go to state 42
    NOT           shift, and go to state 43
    LPARENTH      shift, and go to state 44
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 45
    REALCONSTANT  shift, and go to state 46

    fullexpression  go to state 113
    comparison      go to state 48
    expression      go to state 49
    term            go to state 50
    factor          go to state 51
    atom            go to state 52
    variable        go to state 53


state 89

   58 read: READ variable SEMICOLON .

    $default  reduce using rule 58 (read)


state 90

   59 print: PRINT printlist SEMICOLON .

    $default  reduce using rule 59 (print)


state 91

   61 printlist: printitem COMMA . printlist

    SUBTRACTION     shift, and go to state 42
    NOT             shift, and go to state 43
    LPARENTH        shift, and go to state 44
    CARRIAGERETURN  shift, and go to state 57
    VARIABLE        shift, and go to state 25
    STRING          shift, and go to state 58
    INTCONSTANT     shift, and go to state 45
    REALCONSTANT    shift, and go to state 46

    fullexpression  go to state 59
    comparison      go to state 48
    expression      go to state 49
    term            go to state 50
    factor          go to state 51
    atom            go to state 52
    variable        go to state 53
    printlist       go to state 114
    printitem       go to state 61


state 92

   44 expression: expression . ADDITION term
   45           | expression . SUBTRACTION term
   57 variable: VARIABLE LBRACKET expression . RBRACKET

    ADDITION     shift, and go to state 81
    SUBTRACTION  shift, and go to state 82
    RBRACKET     shift, and go to state 115


state 93

   25 assignment: variable ASSIGN fullexpression . SEMICOLON
   34 fullexpression: fullexpression . AND comparison
   35               | fullexpression . OR comparison

    AND        shift, and go to state 72
    OR         shift, and go to state 73
    SEMICOLON  shift, and go to state 116


state 94

   13 item: VARIABLE LBRACKET INTCONSTANT . RBRACKET

    RBRACKET  shift, and go to state 117


state 95

   10 varlist: item COMMA varlist .

    $default  reduce using rule 10 (varlist)


state 96

   51 factor: LPARENTH expression RPARENTH .

    $default  reduce using rule 51 (factor)


state 97

   34 fullexpression: fullexpression AND comparison .
   37 comparison: comparison . LESSTHAN expression
   38           | comparison . GREATERTHAN expression
   39           | comparison . LESSOREQUAL expression
   40           | comparison . GREATEROREQUAL expression
   41           | comparison . EQUAL expression
   42           | comparison . NOTEQUAL expression

    LESSTHAN        shift, and go to state 75
    GREATERTHAN     shift, and go to state 76
    LESSOREQUAL     shift, and go to state 77
    GREATEROREQUAL  shift, and go to state 78
    EQUAL           shift, and go to state 79
    NOTEQUAL        shift, and go to state 80

    $default  reduce using rule 34 (fullexpression)


state 98

   35 fullexpression: fullexpression OR comparison .
   37 comparison: comparison . LESSTHAN expression
   38           | comparison . GREATERTHAN expression
   39           | comparison . LESSOREQUAL expression
   40           | comparison . GREATEROREQUAL expression
   41           | comparison . EQUAL expression
   42           | comparison . NOTEQUAL expression

    LESSTHAN        shift, and go to state 75
    GREATERTHAN     shift, and go to state 76
    LESSOREQUAL     shift, and go to state 77
    GREATEROREQUAL  shift, and go to state 78
    EQUAL           shift, and go to state 79
    NOTEQUAL        shift, and go to state 80

    $default  reduce using rule 35 (fullexpression)


state 99

   29 ifstatement: IF fullexpression SEMICOLON body . END IF SEMICOLON
   30 ifesle: IF fullexpression SEMICOLON body . ELSE SEMICOLON body END IF SEMICOLON

    END   shift, and go to state 118
    ELSE  shift, and go to state 119


state 100

   37 comparison: comparison LESSTHAN expression .
   44 expression: expression . ADDITION term
   45           | expression . SUBTRACTION term

    ADDITION     shift, and go to state 81
    SUBTRACTION  shift, and go to state 82

    $default  reduce using rule 37 (comparison)


state 101

   38 comparison: comparison GREATERTHAN expression .
   44 expression: expression . ADDITION term
   45           | expression . SUBTRACTION term

    ADDITION     shift, and go to state 81
    SUBTRACTION  shift, and go to state 82

    $default  reduce using rule 38 (comparison)


state 102

   39 comparison: comparison LESSOREQUAL expression .
   44 expression: expression . ADDITION term
   45           | expression . SUBTRACTION term

    ADDITION     shift, and go to state 81
    SUBTRACTION  shift, and go to state 82

    $default  reduce using rule 39 (comparison)


state 103

   40 comparison: comparison GREATEROREQUAL expression .
   44 expression: expression . ADDITION term
   45           | expression . SUBTRACTION term

    ADDITION     shift, and go to state 81
    SUBTRACTION  shift, and go to state 82

    $default  reduce using rule 40 (comparison)


state 104

   41 comparison: comparison EQUAL expression .
   44 expression: expression . ADDITION term
   45           | expression . SUBTRACTION term

    ADDITION     shift, and go to state 81
    SUBTRACTION  shift, and go to state 82

    $default  reduce using rule 41 (comparison)


state 105

   42 comparison: comparison NOTEQUAL expression .
   44 expression: expression . ADDITION term
   45           | expression . SUBTRACTION term

    ADDITION     shift, and go to state 81
    SUBTRACTION  shift, and go to state 82

    $default  reduce using rule 42 (comparison)


state 106

   44 expression: expression ADDITION term .
   47 term: term . MULTIPLICATION factor
   48     | term . DIVISION factor
   49     | term . MODULUS factor

    MULTIPLICATION  shift, and go to state 83
    DIVISION        shift, and go to state 84
    MODULUS         shift, and go to state 85

    $default  reduce using rule 44 (expression)


state 107

   45 expression: expression SUBTRACTION term .
   47 term: term . MULTIPLICATION factor
   48     | term . DIVISION factor
   49     | term . MODULUS factor

    MULTIPLICATION  shift, and go to state 83
    DIVISION        shift, and go to state 84
    MODULUS         shift, and go to state 85

    $default  reduce using rule 45 (expression)


state 108

   47 term: term MULTIPLICATION factor .

    $default  reduce using rule 47 (term)


state 109

   48 term: term DIVISION factor .

    $default  reduce using rule 48 (term)


state 110

   49 term: term MODULUS factor .

    $default  reduce using rule 49 (term)


state 111

   31 whileloop: WHILE fullexpression SEMICOLON body . END WHILE SEMICOLON

    END  shift, and go to state 120


state 112

   27 counting: COUNTING variable UPWARD fullexpression . TO fullexpression SEMICOLON body END COUNTING SEMICOLON
   34 fullexpression: fullexpression . AND comparison
   35               | fullexpression . OR comparison

    AND  shift, and go to state 72
    OR   shift, and go to state 73
    TO   shift, and go to state 121


state 113
